--- a/configuration.properties
+++ b/configuration.properties
@@ -7,6 +7,10 @@ amznUrl = https://www.amazon.com
 faceUrl = https://www.facebook.com
 hmcUrl = https://www.hotelmycamp.com
 brcUrl = https://www.bluerentalcars.com
+google = https://www.google.com
+dataUrl = https://editor.datatables.net/
+herokuappUrl = https://the-internet.herokuapp.com/add_remove_elements/
+guruUrl = http://demo.guru99.com/test/web-table-element.php
 
 !-- Blue RenaCar test datalar?
 userEmail = customer@bluerentalcars.com
